--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template deploy project</title>
+    <title>STYLE WATCH</title>
 
     <link
       rel="stylesheet"
@@ -14,7 +14,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/_main.css" />
   </head>
   <body>
     <!-- Іванна Курач -->
