add button to scroll up and change anchor in the footer link

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,9 @@
     <!-- Тарас Перерва -->
     <load src="./partials/footer.html" />
 
+    <!-- Михайло Пилипів -->
+    <load src="./partials/scroll-to-top.html" />
+
     <!-- Іванна Курач -->
     <load src="./partials/mobile-menu.html" />
 
